Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Cristian E. Nuno
 title: Welcome to Cristian E. Nuno's website!
-theme: jekyll-theme-cayman
+theme: jekyll-theme-leap-day
 description: Feel free to boomark this page to keep an eye on my project updates.
