--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Cristian E. Nuno
 title: Urban Data Science
-theme: jekyll-theme-exemplar
+theme: jekyll-theme-midnight
 description: Using Open-Source Tools to Study Urban Life
