Changed Jekyll Theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Cristian E. Nuno
 title: Urban Data Science
-theme: jekyll-theme-midnight
+theme: jekyll-theme-leap-day
 description: Using Open-Source Tools to Study Urban Life
