--- a/_site.yml
+++ b/_site.yml
@@ -1,34 +1,34 @@
 name: Urban Data Science
 output_dir: '.'
 navbar:
-  title: "Urban Data Science"
+  title: Urban Data Science
   type: default
   left:
-  - text: "Tutorials"
-    icon: "fa-file-code-o fa-lg""
+  - text: Tutorials
+    icon: fa-file-code-o fa-lg
     menu:
-    - text: "R"
-    - text: "Label Points Inside Polygons"
+    - text: R
+    - text: Label Points Inside Polygons
       href: Label_Points_Inside_Polygons.html
-    - text: "Make a Choropleth Map"
+    - text: Make a Choropleth Map
       href: choropleth_map.html
-    - text: "Highlight Points Inside a Certain Radius"
+    - text: Highlight Points Inside a Certain Radius
       href: distance_coord_pairs.html
-  - text: "About"
-    icon: "fa-info fa-lg"
+  - text: About
+    icon: fa-info fa-lg
     href: about.html
-  - text: "Disclaimer"
-    icon: "fa-file-text fa-lg"
+  - text: Disclaimer
+    icon: fa-file-text fa-lg
     href: disclaimer.html
   right:
-  - icon: "fa-github fa-lg"
-    href: "https://github.com/cenuno"
-  - icon: "fa-stack-overflow fa-lg"
-    href: "https://stackoverflow.com/users/7954106/aspiringurbandatascientist"
-  - icon: "fa-linkedin fa-lg"
-    href: "https://www.linkedin.com/in/cristiannuno"
-  - icon: "fa-envelope fa-lg"
-    href: "mailto:nuno.e.cristian@gmail.com"
+  - icon: fa-github fa-lg
+    href: https://github.com/cenuno
+  - icon: fa-stack-overflow fa-lg
+    href: https://stackoverflow.com/users/7954106/aspiringurbandatascientist
+  - icon: fa-linkedin fa-lg
+    href: https://www.linkedin.com/in/cristiannuno
+  - icon: fa-envelope fa-lg
+    href: mailto:nuno.e.cristian@gmail.com
 output:
   html_document:
     theme: readable
